--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "electron"],
+  "include": ["src", "electron", "tests/BlockHelpers.test.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
